--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="author" content="MeganOlsen"/>
     <link rel="icon" href="https://w7.pngwing.com/pngs/465/267/png-transparent-letter-m-logo-magic-the-gathering-playing-card-magic-points-card-game-artifact-gathering-miscellaneous-game-monochrome-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
